--- a/package.json
+++ b/package.json
@@ -22,12 +22,29 @@
   "author": "Sasa Djolic <sasa.djolic@gmail.com> (https://www.linkedin.com/in/sasadjolic/)",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@cucumber/cucumber": "^7.0.0",
+    "babelify": "^10.0.0",
     "json5": "^2.1.3",
     "memfs": "^3.2.0",
     "memorystorage": "^0.12.0",
     "nyc": "^15.1.0",
     "passgen": "^1.1.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "plugins": [
+            "@babel/plugin-proposal-nullish-coalescing-operator",
+            "@babel/plugin-proposal-optional-chaining"
+          ]
+        }
+      ]
+    ]
+  }
 }
